[package]
name = "flux"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
description = "FLUX: FLUX Launches Unix Executables"
readme = "README.md"
repository = "https://github.com/yourusername/flux"
keywords = ["cli", "web", "api", "actix", "wrapper"]

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonwebtoken = "9"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"

[build-dependencies]
